# demosat_plan

./: README.md  pyproject.toml  setup.py
examples/: demosat_schedule_2024_02_02.json  ephemeris.txt  schedule_demo.py  schedule_output.html  schedule_output.json  schedule_output_before_change.html  scheduling_demo.ipynb
src/demosat_plan/: claimables.py  demosat_scheduler.py
src/demosat_plan/activities/: comm_activities.py  orbit_events.py  plan_activities.py  science_activities.py  spacecraft_activities.py
src/demosat_plan/test/: README.md  __init__.py  conftest.py  test_adcs_yaw_activities.py  test_calibration_activities.py  test_comm_windows.py  test_demosat_scheduler.py  test_orbit_events.py  test_science_activities.py
